[gd_scene load_steps=25 format=2]

[ext_resource path="res://scenes/player/UIController.gd" type="Script" id=1]
[ext_resource path="res://sprites/ui/PanelBeige.png" type="Texture" id=2]
[ext_resource path="res://Date.gd" type="Script" id=3]
[ext_resource path="res://segoeuil.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://SkillsPage.gd" type="Script" id=5]
[ext_resource path="res://sprites/ui/Cross Brown.png" type="Texture" id=6]
[ext_resource path="res://MageFirePage.tscn" type="PackedScene" id=7]
[ext_resource path="res://sprites/ui/buttonBeige.png" type="Texture" id=8]
[ext_resource path="res://StatsPanel.tscn" type="PackedScene" id=9]
[ext_resource path="res://StatusBar.tscn" type="PackedScene" id=10]
[ext_resource path="res://Inventory.tscn" type="PackedScene" id=11]
[ext_resource path="res://QuestsUI.tscn" type="PackedScene" id=12]
[ext_resource path="res://Dialogue.tscn" type="PackedScene" id=13]
[ext_resource path="res://Options.tscn" type="PackedScene" id=14]
[ext_resource path="res://QuestionBox.tscn" type="PackedScene" id=15]
[ext_resource path="res://sprites/ui/PanelBrown.png" type="Texture" id=16]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 100, 100 )
margin_left = 29.9169
margin_right = 26.0
margin_top = 38.0
margin_bottom = 31.0

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 13
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 100, 100 )
margin_left = 27.0
margin_right = 19.0
margin_top = 30.0
margin_bottom = 31.0

[sub_resource type="DynamicFont" id=6]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=7]
size = 21
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 16 )
region_rect = Rect2( 0, 0, 100, 100 )
margin_left = 22.0
margin_right = 41.0
margin_top = 34.0
margin_bottom = 25.0

[node name="UIController" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Date" type="Panel" parent="."]
editor/display_folded = true
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -128.0
margin_top = -77.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="Date"]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = -5

[node name="Date" type="Label" parent="Date/VBoxContainer"]
margin_right = 128.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Aug 15 2019"
align = 1
valign = 3

[node name="Date2" type="Label" parent="Date/VBoxContainer"]
margin_top = 23.0
margin_right = 128.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Aug 15 2019"
align = 1
valign = 2

[node name="Time" type="Label" parent="Date/VBoxContainer"]
margin_top = 37.0
margin_right = 128.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "99:99"
align = 1
valign = 2

[node name="Skills" type="Panel" parent="."]
editor/display_folded = true
visible = false
margin_left = 645.0
margin_right = 960.0
margin_bottom = 540.0
custom_styles/panel = SubResource( 5 )
script = ExtResource( 5 )

[node name="CloseButton" type="TextureButton" parent="Skills"]
margin_left = 275.062
margin_top = 10.5688
margin_right = 307.062
margin_bottom = 42.5688
texture_normal = ExtResource( 6 )
expand = true

[node name="SP" type="Label" parent="Skills"]
margin_left = 227.903
margin_top = 491.144
margin_right = 336.903
margin_bottom = 582.144
custom_fonts/font = SubResource( 6 )
text = "SP: 15
"

[node name="Pages" type="Control" parent="Skills"]
margin_right = 40.0
margin_bottom = 40.0

[node name="MageFirePage" parent="Skills/Pages" instance=ExtResource( 7 )]

[node name="LearnedSkills" type="TextureButton" parent="Skills"]
editor/display_folded = true
margin_left = 11.376
margin_top = 488.031
margin_right = 158.376
margin_bottom = 528.031
texture_normal = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Skills/LearnedSkills"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 7 )
text = "Learned Skills"
align = 1
valign = 1

[node name="Stats" parent="." instance=ExtResource( 9 )]

[node name="StatusBar" parent="." instance=ExtResource( 10 )]
margin_top = -183.0

[node name="Inventory" parent="." instance=ExtResource( 11 )]
editor/display_folded = true
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -243.0
margin_bottom = 0.0

[node name="InventoryList" parent="Inventory" index="0"]
visible = false

[node name="HBoxContainer" parent="Inventory/HotkeyList" index="0"]
editor/display_folded = false

[node name="ItemHolder" parent="Inventory/HotkeyList/HBoxContainer" index="0"]
editor/display_folded = false

[node name="CashAmount" parent="Inventory" index="2"]
margin_left = 654.277
margin_top = 205.403
margin_right = 733.277
margin_bottom = 238.403

[node name="Quests" parent="." instance=ExtResource( 12 )]

[node name="Dialogue" parent="." instance=ExtResource( 13 )]
visible = false

[node name="Options" parent="." instance=ExtResource( 14 )]

[node name="QuestionBox" parent="." instance=ExtResource( 15 )]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = -250.0
margin_top = -120.0
margin_right = 250.0
margin_bottom = 0.0
custom_styles/panel = SubResource( 8 )
[connection signal="pressed" from="Skills/CloseButton" to="Skills" method="_on_CloseButton_pressed"]

[editable path="Inventory"]
